<resources>
    <string name="app_name">Lar</string>
    <string name="title_suggestions">پیشنهاد ها</string>
    <string name="title_search">جستجو در</string>
    <string name="title_splash">لار, شهری به رنگ خاک</string>
    <string name="title_info">درباره ما</string>
    <string name="title_zoom">اندازه متن</string>
    <string name="category_1_natural_geography">جغرافیا طبیعی</string>
    <string name="category_2_local_games">بازی های محلی</string>
    <string name="category_3_ancient_places">اماکن باستانی</string>
    <string name="category_4_economic_view">اقتصادی</string>
    <string name="category_5_proverbs">ضرب المثل ها</string>
    <string name="category_6_foods">غذا های بومی</string>
    <string name="content_description_pattern">Pattern</string>
    <string name="content_description_menu">Menu</string>
    <string name="content_description_suggestions">suggestion</string>
    <string name="content_description_search">Search</string>
    <string name="content_description_lar">Lar</string>
    <string name="menu_item_more_information">درباره ما</string>
    <string name="menu_item_share">به اشتراک گذاری</string>
    <string name="menu_item_exit">خروج</string>
    <string name="lorem_title">متن نمونه</string>
    <string name="lorem_description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را</string>
    <string name="info_text">اپلیکیشن لار، پروژه یکی از دروس دانشگاه دولتی این شهر یعنی مجتمع آموزش عالی لارستان می باشد.
توسعه دهنده این برنامه از دانشجویان این دانشگاه می باشد.
برنامه لار به جهت زنده شدن قسمت کوتاهی از تاریخچه این شهر کهن می باشد. گفتنی است این شهر قبلاً به اسم های لاد و ایراهستان شناخته می‌شد.
این شهر دارای تاریخچه ای پر رمز و راز و عجیب است که امید می رود با پیشرفت این اپلیکیشن، به معرفی هرچه بیشتر این شهر تاریخی پرداخته شود.</string>
    <string name="info_title">اپلیکیشن لار</string>
    <string name="category_1_title_abohava">آب و هوا</string>
    <string name="category_1_title_rodha">رود ها</string>
    <string name="category_1_title_maeaden">معادن</string>
    <string name="category_1_title_zendegijanevari">زندگی جانوری</string>
    <string name="category_2_title_patako">پاتلکو</string>
    <string name="category_2_title_petotsk">پتوتسک</string>
    <string name="category_2_title_chkhrk">چخرک</string>
    <string name="category_2_title_dartopa">دارتوپا</string>
    <string name="category_2_title_rig">ریگ</string>
    <string name="category_2_title_lpergale">لپرگاله</string>
    <string name="category_2_title_maye">مایه</string>
    <string name="category_2_title_haftdzhaftgale">هفت دز هفت گاله</string>
    <string name="category_3_title_emamzade">امام زاده</string>
    <string name="category_3_title_bazar">بازار قیصریه</string>
    <string name="category_3_title_borj">برج ننه نادر</string>
    <string name="category_3_title_qadamgah">قدمگاه</string>
    <string name="category_3_title_qale">قلعه اژدها پیکر</string>
    <string name="category_4_title_sekelari">سکه لاری</string>
    <string name="category_5_title_koliat">کلیات</string>
    <string name="category_6_title_taftan">تفتان</string>
    <string name="category_6_title_halva">حلوا</string>
    <string name="category_6_title_delbaro">دلبرو</string>
    <string name="category_1_content_abohava">لارستان جزو مناطق گرم و خشک ایران است که میزان بارندگی آن به طور متوسط بین 200 تا 250 میلیمتر است . این منطقه دارای تابستان گرم و طولانی و زمستان کوتاه و معتدل است . هر چند گاهی اوقات حداقل مطلق درجهْ حرارت به زیر صفر می رسد ( آذر 1366 ش ) ، میانگین درجهْ حرارت روزانه و ماهانه غالباً چندین درجه بالای صفر است . ( میانگین روزانه 14/2 در بهمنن 1366 ش ) . بارندگی در این منطقه بیشتر در فصل زمستان و منشا آن بادهای باران آور غربی است . در بعضی از سال ها در فصل تابستان ادامهُ بادهای موسمی اقیانوس هند به این شهرستان کشیده می شود و موجب بارندگی در فصل تابستان می شود . این بارن ها در زبان محلّی به «‌چل پسینی » (موسوم است و با طوفان و رعد و برق شدید همراه سیل آسا و زورگذر است .</string>
    <string name="category_1_content_rodha">با توجه به این که این شهرستان در نواحی خشک و کم آب ایران قرار دارد ، شبکهُ آب های آن کم و اتفاقی است . تنها رود بزرگ لارستان رود شورِ مهران ( mehr ā n ) نام دارد .این منطقه دارای 83 چشمه دایمی و هفت چشمهُ فصلی است که از این تعداد برخی از آنها چشمه های معدنی است که به دلیل گوگردی بودن ترکیب آب آنها در معالجه امراض پوستی مفید است ؛ نظیر آب گرم چاهو ( č ā ha ) ، هم چنین با حفر 68رشته قنات و 3275 حلقه چاه با فقر منابع سطحی آب مقابله شده است . دو دریاچهُ فصلی هیرم ( hirm ) و بیدشهر ( bid š eer ) با وسعت 81 کیلومتر مربع در شمال و شمال غربی شهر اوز ( evaz ) و دریاچه دنگز ( dangz ) در شمال لار قرار دارد .</string>
    <string name="category_1_content_maeaden">فقر منابع تحت الارضی و مواد اولیهُ صنعتی ،‌ سبب ِ‌ محدودیتهایی برای استقرار صنایع در منطقه شده است . با این همه ، با توجه به معادن موجود ، امكان بالقوهُ سرمایه گذاری ،‌ در برخی صنایع وجود دارد . معادن ِ نمك ، سنگ گچ و سنگ آهك ِ‌بسیاری در لارستان موجود است . برای مثال ، هماتیت در جنوب شرقی لارستان در منطقهُ هورمود وجود دارد ولی ذخیرهُ احتمالی آن مشخص نیست . از سنگ گچ و آهك اكنون دركارگاه های تولیدی محلّی استفاده می شود و در صورت متمركز شدن فعالیت كارگاه ها و ایجاد شركت تعاونی و بسته بندی كردن گچ ،‌بازده تولید بالاتر و توزیع ، مناسب تر خواهد بود . از گنبده های نمكی موجود در لارستان نیز بهره برداری می شود و منابع منطقهُ چاهو دارای ذخیرهُ شایان توجه است . مورِّخ لاری دربارهُ معادن لارستان نوشته است .« معدنیات تحت الارضی لارستان و كوهستان های آن عبارت است از سرب ، آهن ، مس ، گل گلك و زا ج سیاه كه موسوم به « زاج لاری » است و در كوه تنگ « زاج » موجود است. »</string>
    <string name="category_1_content_zendegijanevari">جانوران شکارکردنی لارستان شامل کل ، بز ، قوچ ،‌میش ، جبیر و جانوران درنده پلنگ ، گرگ و انواع روباه ، سیاه گوش ، شغال و کفتار است .کبک، تیهو ، دراج و پرندگان مهاجر فصلی نیز در زیستگاه های طبیعی آن زندگی می کنند .در سالهایی که بارندگی زیاد باشد دریاچه های فصلی هیرم و دنگز زیستگاه موقت تعداد بسیاری از پرندگان آبی از قبیل کیشم ، خانوادهُ کله سبز ، خانوادهُ حواصیل و فلامینگو و مرغابی است .منطقهُ حفاظت شدهُ هرمود ( hormud ) ،‌که در شرق لارستان و در مجاورت کوهِ شو قرار گرفته و چشمه های متعددی در محدودهُ آن وجود دارد،زیستگاه قوچ لارستانی است و کسی حق ندارد آن کل و بز و جبیر و پلنگ شکار کند .</string>
    <string name="category_2_content_patako">وسایل بازی:گِل(شل) شرح بازی :این بازی بیشتر در تابستان ها که آب انبارها را برای آبگیری در زمستان تخلیه می کنند رواج دارد که چندین نفر جمع می شوند و2 به 2 به گروه هایی تقسیم می شوند و هر کدام گلوله ای شل بر می دارند و به صورت کاسه کوچکی(پاتلک) در می آورند.بعد نفر اول پاتلکش را محکم از دهانه به زمین می زد، ته پاتلک سوراخ می شد بعد نفر دوم مقداری شل به اندازه سوراخ به نفر اول می دهد و نفر اول باز کاسه می سازد آنگاه نفر دوم باید این کار را تکرار کند این بازی تا وقتی ادامه دارد که شل یکی از بازیکنان تمام شود . در آخر برنده ها نیز با هم مسابقه می دهند و بازی را تکرار می کنند تا بالاخره یک نفر پیروز میدان شود.</string>
    <string name="category_2_content_petotsk">وسایل بازی : و سایل خاصی نیاز ندارد.شرح بازی: در این بازی مانند قایم باشک عمل می کنند .  فقط در ابتدای بازی برای مشخص کردن گرگ ( کسی که چشم می گذارد) این شعر را می خوانند : يَنكَل – دُونکل – سِه نكَل ، 4 ، بَیلق بشکن تیر انداز ، اَولُ و مَولُ ، عَلَم پتوتسک که کلمه پتوتسک به هر کسی می افتاد او گرگ می شد و چشم می گذاشت و هنگامی که بقیه افراد پنهان می شدند با علامت آنها شروع به گشتن می کرد و هر کس را اول می یافت ، او گرگ می شد</string>
    <string name="category_2_content_chkhrk">وسایل بازی : قرقره ی تخته ای ( چخرک)شرح بازی : تعدادی بازیکن در ابتدا دایره ای را روی زمین می کشند ، بعد هر کدام دو قرقره ی تخته ای (چخرک) را درون دایره می نشانند ، بعد یکی از آنان بازی را بدین ترتیب شروع می کند :سنگی گرد را به طرف دایره پرتاب می کند و هر میزان قرقره از دایره خارج شد ، از آنِ پرتاب کننده است و بدین ترتیب بازی ادامه می یابد .تک تک افراد بازی می کنند تا قرقره ها تمام شود. هر کدام از بازیکنان که قرقره بیشتری داشت ، برنده می شود و در دوره دوم او بازی را شروع می کند.این بازی این روزها فراموش شده است. این بازی در تابستانها انجام می گرفته است .</string>
    <string name="category_2_content_dartopa">هدف بازی: افزایش سرعت چابکی و قدرت عکس العملوسایل بازی : دار یا چوبی به طول 50 سانتی متروقطر3 الی 5 سانتی متر یک عدد توپ که معمولا پارچه ای است و زمینی مسطح تقریبا به طول 50 متر و عرض 30 متردر این بازی دار به معنی چوب می باشد و نوغ توپی که استفاده می شود معمولا بدین شکل است که درون یک جوراب کهته را تا نیمه پر از تکه های پارچه و یک عدد سنگ گرد و کوچک می کنند و بقیه جوراب را درون ان می دوزند و سپس با استفاده از تکه پارچه های رنگی و دوختن ان به توپ آن را رنگی رنگی می کنند که به زبان محلی به آن توپ گلباچی گویند که از نخ های ضخیم رنگی نیز ساخته می شود.شرح بازی :ابتدا از زمینی مستطیلی شکل حدودا به طول 50 متر و عرض 30 متر را در نظر می گیرند ابتدای زمین در وسط حط عرضی نقطه شروع بازی است و در انتهای آن محلی را یه عنواو دکه یا ایستگاه تعیین می کنند پس از آن دو نفر به عنوان اسا یا استاد تعیین می شوند و شروع به انتخاب مرد یا یار می کنند پس از مشخص شدن گروه ها هر گروه به تعداد نفرات توپ را بار می کنند ( مانند عمل روپایی در بازی فوتبال امروزی ) هر گزوه که بیشتر توپ را بار کرد شروع کننده بازی است و می بایست به توپ ضربه وارد کند و اصطلاحا در زمین بالا ( محل زدن توپ) و گروه دیگر در زمین پایین یا جاییکه می بایست توپ را بگیرند قرار می گیرند .برای انجام بازی هر مرد یا یار که معمولا دوبار حق زدن توپ را دارد با یک دست توپ را به هوا پرتاب می کند و با دست دیگر با دار به توپ ضربه می زند در اینجا دوحالت پیش می آید . اگر این فرد موفق به ضربه زدن شد و گروه مقابل نتوانستند توپ را در هوا بگیرند می بایست خود را به انتهای زمین رسانده و با لمس دکه به محل شروع بازی باز گردد در این هنگام نباید توسط گروه مقابل با توپ زده شود همچنین او می تواند در صورت مساعد نبودن موقعیت فرار در دکه بماند و در فرصت دیگری که توسط یکی از دیگر از یاران خودش با زدن توپ فراهم می شود به ابتدای زمین برگردد .</string>
    <string name="title_sound_info">صدای لار</string>
</resources>